--- a/userList/src/app/login/login.component.html
+++ b/userList/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="password" formControlName="password" class="form-control" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" appConfirmEqualValidator='password' />
+                <input type="password" formControlName="password" class="form-control" placeholder="Password" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" />
                 <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
                     <div *ngIf="fval.password.errors.required">Password is required</div>
                     <div *ngIf="fval.password.errors.minlength">Password must be at least 6 characters</div>
