--- a/userList/src/app/user-detail-view/user-detail-view.component.html
+++ b/userList/src/app/user-detail-view/user-detail-view.component.html
@@ -1,10 +1,15 @@
 <div *ngIf="!showError">
-    <div class="headSec">
+    <div *ngIf="!showHeadSuccess" class="headSec">
         <div class="container">
             <h2>{{userName}}'s Details</h2>
             <button style="margin-top: -40px; font-size: 32px;" type="button" class="close" aria-label="Close" (click)="close()">
                 <span aria-hidden="true">&times;</span>
               </button>
+        </div>
+    </div>
+    <div *ngIf="showHeadSuccess" class="headSec">
+        <div class="container">
+            <h2 class="text-danger">{{firstName}}'s data updated successfully</h2>
         </div>
     </div>
     <div class="container bodyStyle">
@@ -35,9 +40,16 @@
                         <div *ngIf="fval.email.errors.email">Enter a valid email address</div>
                     </div>
                 </div>
-                <div class="form-group" style="margin-left: 140px;">
+                <div *ngIf="showHeadSuccess" class="form-group">
+                    <label for="updatedAt">Updated On</label>
+                    <input type="updatedAt" id="updatedAt" formControlName="updatedAt" [(ngModel)]="updatedAt" class="form-control" readonly="readonly" placeholder="Updated At" />
+                </div>
+                <div *ngIf="!showHeadSuccess" class="form-group" style="margin-left: 140px;">
                     <button type="button" class="btn btn-primary" (click)="enableUpdateData()">Edit Data</button>
                     <button style="margin-left:25px" type="button" class="btn btn-secondary" (click)="deleteData()">Delete</button>
+                </div>
+                <div *ngIf="showHeadSuccess" class="form-group" style="margin-left: 140px;">
+                    <button type="button" class="btn btn-secondary" (click)="close()">Close</button>
                 </div>
             </form>
         </div>
