--- a/userList/src/app/user-view/user-view.component.html
+++ b/userList/src/app/user-view/user-view.component.html
@@ -13,6 +13,23 @@
         </div>
     </div>
     <div class="container footerSec">
-
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" (click)="getUsers(1)" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" (click)="getUsers(1)">1</a></li>
+                <li class="page-item"><a class="page-link" (click)="getUsers(2)">2</a></li>
+                <li class="page-item">
+                    <a class="page-link" (click)="getUsers(2)" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
