--- a/userList/src/app/user-view/user-view.component.css
+++ b/userList/src/app/user-view/user-view.component.css
@@ -10,8 +10,13 @@
 }
 
 .customAddbtn {
-    margin-left: 74vw;
+    margin-left: 68vw;
     margin-top: -78px;
+}
+
+.customAddbtnLogout {
+    margin-left: 74vw;
+    margin-top: -118px;
 }
 
 .bodyStyle {
