--- a/userList/src/app/user-view/user-view.component.html
+++ b/userList/src/app/user-view/user-view.component.html
@@ -3,6 +3,7 @@
         <div class="container">
             <h2 class="alignhead">Users List</h2>
             <button class="btn btn-secondary customAddbtn" type="button" (click)="addUser()"><i class="bi bi-plus"></i>Add User</button>
+            <button class="btn btn-success customAddbtnLogout" type="button" (click)="logout()">Logout</button>
         </div>
     </div>
     <div class="container bodyStyle">
